osops: use initgroups() if available
Otherwise it's broken on BSD and macos if you have more than 16
groups.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/configure.ac
+++ b/configure.ac
@@ -2258,6 +2258,7 @@ AC_CHECK_FUNCS(strncasecmp)
 AC_CHECK_FUNCS(prctl)
 AC_CHECK_FUNCS(setutxent)
 AC_CHECK_FUNCS(sigtimedwait)
+AC_CHECK_FUNCS(initgroups)
 
 AC_CHECK_DECLS([SIGWINCH], [], [], [#include <signal.h>])
 
