script: combine into one file
Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,7 +9,7 @@ noinst_HEADERS = telnet.h heap.h utils.h seriallock.h \
 	gensio_filter_certauth.h gensio_filter_msgdelim.h \
 	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
 	errtrig.h avahi_watcher.h gensio_net.h gensio_filter_kiss.h \
-	gensio_filter_xlt.h gensio_filter_script.h \
+	gensio_filter_xlt.h \
 	gensio_ll_sound.h alsa_sound.h win_sound.h portaudio_sound.h \
 	file_sound.h crc.h \
 	gensio_filter_afskmdm.h
@@ -325,12 +325,12 @@ libgensio_keepopen_la_LDFLAGS = $(DYNAMIC_LDFLAGS)
 libgensio_keepopen_la_LIBADD = $(DYNAMIC_LIBS)
 
 if BUILTIN_SCRIPT
-libgensio_la_SOURCES += gensio_filter_script.c gensio_script.c
+libgensio_la_SOURCES += gensio_script.c
 else
 EXTRA_LTLIBRARIES += libgensio_script.la
 endif
 gensiolibexec_LTLIBRARIES += $(DYNAMIC_SCRIPT)
-libgensio_script_la_SOURCES = gensio_filter_script.c gensio_script.c
+libgensio_script_la_SOURCES = gensio_script.c
 libgensio_script_la_LDFLAGS = $(DYNAMIC_LDFLAGS)
 libgensio_script_la_LIBADD = $(DYNAMIC_LIBS)
 
