relpkt: Combine into one file
Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ lib_LTLIBRARIES = libgensioosh.la libgensiomdns.la libgensio.la
 noinst_HEADERS = telnet.h heap.h utils.h seriallock.h \
 	gensio_filter_ssl.h gensio_filter_telnet.h gensio_ll_ipmisol.h \
 	gensio_filter_certauth.h gensio_filter_msgdelim.h \
-	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
+	gensio_filter_trace.h gensio_filter_perf.h \
 	errtrig.h avahi_watcher.h gensio_net.h gensio_filter_kiss.h \
 	gensio_filter_xlt.h \
 	gensio_ll_sound.h alsa_sound.h win_sound.h portaudio_sound.h \
@@ -255,12 +255,12 @@ libgensio_msgdelim_la_LDFLAGS = $(DYNAMIC_LDFLAGS)
 libgensio_msgdelim_la_LIBADD = $(DYNAMIC_LIBS)
 
 if BUILTIN_RELPKT
-libgensio_la_SOURCES += gensio_filter_relpkt.c gensio_relpkt.c
+libgensio_la_SOURCES += gensio_relpkt.c
 else
 EXTRA_LTLIBRARIES += libgensio_relpkt.la
 endif
 gensiolibexec_LTLIBRARIES += $(DYNAMIC_RELPKT)
-libgensio_relpkt_la_SOURCES = gensio_filter_relpkt.c gensio_relpkt.c
+libgensio_relpkt_la_SOURCES = gensio_relpkt.c
 libgensio_relpkt_la_LDFLAGS = $(DYNAMIC_LDFLAGS)
 libgensio_relpkt_la_LIBADD = $(DYNAMIC_LIBS)
 
