--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -7,7 +7,7 @@ man_MANS = gensio.5 gensio_event.3 str_to_gensio.3 gensio_set_callback.3 \
 	gensio_acc_control.3 gensio_acc_get_type.3 gensio_add_default.3 \
 	str_to_gensio_accepter.3 gensio_acc_accept_s.3 gensio_acc_startup.3 \
 	sergensio.5 gensio_to_sergensio.3 sergensio_baud.3 \
-	sergensio_b_alloc.3 sergensio_event.3 gensio_mdns.3
+	sergensio_b_alloc.3 sergensio_event.3 gensio_mdns.3 gensio_bswap.3
 
 # Note that $(LN_SF) is set in configure.ac
 
