gtlsshd: Some MDNS fixes
Only use the first part of the FQDN for the hostname.

Allow flags to be put into /etc/defaults/gtlsshd to allow -m to be set
in the gtlsshd.service file.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/tools/gtlsshd.service.in
+++ b/tools/gtlsshd.service.in
@@ -5,7 +5,8 @@ Documentation=man:gtlsshd(8)
 
 [Service]
 Type=simple
-ExecStart=@gtlsshdbindir@/gtlsshd --nodaemon
+EnvironmentFile=@sysconfigdir@/default/gtlsshd
+ExecStart=@gtlsshdbindir@/gtlsshd --nodaemon $gtlsshdflags
 StandardOutput=null
 Restart=on-failure
 
