gtlsshd: Fix the setting of the gtlsshd default file
Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/tools/gtlsshd.service.in
+++ b/tools/gtlsshd.service.in
@@ -5,7 +5,7 @@ Documentation=man:gtlsshd(8)
 
 [Service]
 Type=simple
-EnvironmentFile=@sysconfigdir@/default/gtlsshd
+EnvironmentFile=@gtlsshddefault@
 ExecStart=@gtlsshdbindir@/gtlsshd --nodaemon $gtlsshdflags
 StandardOutput=null
 Restart=on-failure
