ipmisol: Split out OpenIPMI OS handler to its own library
It will be useful for anything that uses OpenIPMI and gensio from
the same file.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/configure.ac
+++ b/configure.ac
@@ -1061,6 +1061,7 @@ else
 fi
 AC_DEFINE_UNQUOTED([HAVE_OPENIPMI], [$HAVE_OPENIPMI],
 	[Set to 1 to enable IPMI support through OpenIPMI, 0 to disable])
+AM_CONDITIONAL([HAVE_OPENIPMI], [test ${HAVE_OPENIPMI} = 1])
 AC_SUBST(HAVE_OPENIPMI)
 AC_SUBST(OPENIPMI_CPPFLAGS)
 AC_SUBST(OPENIPMI_LIBS)
