Remove all sergensio code
Nothing uses it now.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -36,7 +36,7 @@ libgensiomdns_la_LIBADD = libgensioosh.la ${MDNS_LIBS} \
 	${REGEX_LIB}
 
 libgensio_la_SOURCES = \
-	gensio.c gensio_base.c sergensio.c buffer.c \
+	gensio.c gensio_base.c buffer.c \
 	ll_fd.c ll_gensio.c acc.c acc_gensio.c
 libgensio_la_CPPFLAGS = -DBUILDING_GENSIO_DLL
 libgensio_la_LDFLAGS = -no-undefined -version-info $(GENSIO_LIB_VERSION) \
