configure: Fix compile when ssl is disabled
Use BUILD_OPENSSL, not HAVE_OPENSSL for knowing if you should
build gtlssh....  That way if ssl is disabled on a machine that
has ssl, it will still compile.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/configure.ac
+++ b/configure.ac
@@ -2172,7 +2172,7 @@ GTLSSHMAN=
 GTLSSYNCMAN=
 GTLSSHDMAN=
 GTLSSH_KEYGENMAN=
-if test $HAVE_OPENSSL -eq 1; then
+if test $BUILD_OPENSSL -eq 1; then
    if test $DISABLE_GTLSSHD = yes; then
       echo "gltsshD disabled"
    elif test $HAVE_PAM -eq 1; then
