gensio: Extend some time/param/default handling
Allow time to be specified in defaults and build ways to get it.

Add time to pparam handling.

Add gensio_get_default_uint() for getting unsigned ints.

Remove redundant gensio_time_cmp().

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -33,7 +33,8 @@ gensios_enabled = {
     "perf": 1,
     "mdns": @HAVE_MDNS@,
     "ax25": 1,
-    "ratelimit": 1
+    "ratelimit": 1,
+    "chardelay": 1
 }
 
 # Gensios that are always last in the list.
